# revolver-ai-bot

./: .dockerignore  .env  .env.staging  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOY_SLACK.md  Dockerfile  Dockerfile.dev  Makefile  Procfile  PyPDF2.py  README 2.html  README 2.md  README.html  README.md  SHA256SUM.txt  config.py  coverage.xml  docker-compose.dev.yml  gen_sig.sh  generate_test_pdfs.py  ngrok.yml  out.pptx  pyproject.toml  pytest.ini  pytrends.request.py  requirements-dev.txt  requirements.txt  run_parser.py  sample.txt  watch.yml
.github/workflows/: ci.yml
api/: main.py  slack_events_handler.py  slack_routes.py  slack_server.py  slack_server_signature.py
archive/old_files/: run_monitor.py
archive/scripts/: generate_sample_brief_pdf.py
bot/: __main__.py  analysis.py  config.py  email_handler.py  monitoring.py  orchestrator.py  reco_api.py  slack_bot.py  slack_events_endpoint.py  slack_events_handler.py  slack_handler.py
bot/utils/: logger.py
data/: veille.csv
docs/: mkdocs.yml
parser/: nlp_utils.py  pdf_parser.py  pytest.ini  validator.py
path/to/: output.pptx
pptx_generator/: slide_builder.py
reco/: api_models.py  generator.py  models.py  reco_api.py
schema/: brief_output.schema.json  brief_output_schema.json  brief_schema.json
scripts/: generate_brief_pdf.py  generate_brief_sample.py  generate_sample_pdf.py  make_valid_test_pdf.py  publish_ghcr.sh  test_all.sh  validate_schema.py
secrets/: .env  .env.example  credential.json
streamlit_app/: app.py
tests/: conftest.py  conftest.py.bak  test_api.py  test_cli_analyse.py  test_cli_report.py  test_env.py  test_extract_pdf.py  test_extract_text_from_pdf_schema.py  test_fetch_rss_empty  test_generate_test_pdfs.py  test_generator_ideas_timeline_budget.py  test_generator_llm.py  test_generator_sections.py  test_generator_signatures.py  test_generator_stubs.py  test_handle_slack_event_upload.py  test_integration.py  test_monitoring.py  test_nlp_utils.py  test_orchestrator.py  test_parser.py  test_pdf_parser.py  test_reco_generator.py  test_slack_commands.py  test_slack_e2e.py  test_slack_handler.py  test_slack_handler_unit.py  test_slack_report.py  test_slack_routes.py  test_slack_server.py  test_slack_server_signature.py  test_slack_veille.py  test_slide_builder.py  test_validator.py
tests/fixtures/: sample.rss
tests/samples/: brief_multi.txt  brief_simple.txt  sample.txt
tests/snapshots/: extract_brief_sections_simple.json
utils/: logger.py
