[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revolver_ai_bot"
version = "0.1.0"
description = "Revolver AI Bot"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Romeo Cavazza", email = "romeo@example.com" }
]
dependencies = [
  "python-pptx>=0.6.21",
  "python-dotenv>=1.0.0",
  "openai>=0.27.0"
]

[tool.setuptools.packages.find]
include = [
  "bot*",
  "parser*",
  "pptx_generator*",
  "reco*",
  "utils*"
]